Bug Fixes. Code Clean up. Image Optimization.

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         <article id="wedding" class="parallax__group">
           <div class="parallax__layer parallax__layer--fore">
             <div class="pure-g">
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+                <div class="l-box-lrg pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
-                    <h2 class="content-head">The Wedding</h2>
+                    <h2>The Wedding</h2>
 
                     <p>
                         It was crazy leading up to the wedding. Originally, scheduled for New Year's, due to our unexpected surprise the wedding was moved up by 3 months. Working with Carnival and our family, we were able to move the date of our wedding and honeymoon. The were some crazy moments, like running through an Airport with a Wedding Dress and Tux to make it to the county office in time to get our marriage license, but we did it together. On September 22, 2013, on board the Carnival Breeze, Stephanie and I were married in the presence of our immediate family.<br>
@@ -217,6 +217,6 @@
           </div>
         </article>
     </section>
-    
+    <script src="js/main.min.js"></script>
 </body>
 </html>
